syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "GenerateChangelogProto";

package liquibase;

service GenerateChangelogService {
  rpc execute(GenerateChangelogRequest) returns (Response) {}
}

/* Generate a changelog */
message GenerateChangelogRequest {
  optional string author = 1; // Specifies the author for changesets in the generated changelog
  optional string changelog_file = 2; // Changelog file to write results
  optional string context_filter = 3; // Changeset contexts to generate
  optional string data_output_directory = 4; // Directory to write table data to
  optional string default_catalog_name = 5; // The default catalog name to use for the database connection
  optional string default_schema_name = 6; // The default schema name to use for the database connection
  optional string diff_types = 7; // Types of objects to compare
  optional string driver = 8; // The JDBC driver class
  optional string driver_properties_file = 9; // The JDBC driver properties file
  optional string exclude_objects = 10; // Objects to exclude from diff
  optional bool include_catalog = 11; // If true, the catalog will be included in generated changeSets. Defaults to false.
  optional string include_objects = 12; // Objects to include in diff
  optional bool include_schema = 13; // If true, the schema will be included in generated changeSets. Defaults to false.
  optional bool include_tablespace = 14; // Include the tablespace attribute in the changelog. Defaults to false.
  optional string label_filter = 15; // Changeset labels to generate
  optional string output_schemas = 16; // Output schemas names. This is a CSV list.
  optional bool overwrite_output_file = 17; // Flag to allow overwriting of output changelog file. Default: false
  optional string password = 18; // Password to use to connect to the database
  optional string replace_if_exists_types = 19; // Sets replaceIfExists="true" for changes of these types (supported types: createFunction, createPackage, createPackageBody, createProcedure, createTrigger, createView)
  optional string run_on_change_types = 20; // Sets runOnChange="true" for changesets containing solely changes of these types (e. g. createView, createProcedure, ...).
  optional string schemas = 21; // Schemas to include in diff
  string url = 22; // *required* The JDBC database connection URL
  optional bool use_or_replace_option = 23; // If true, will add 'OR REPLACE' option to the create view change object
  optional string username = 24; // Username to use to connect to the database
  liquibase.GlobalOptions global_options = 25;
}

message Response {
  string message = 1;
}
